:label: try fix package on macos